--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -17,5 +17,5 @@ jobs:
     - name: Install dependencies
       run: npm install
 
-    - name: Run tests
-      run: npm test
+    - name: node server.js
+      run: node server.js
