--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -1,23 +1,15 @@
-name: callerworkflow
-
-on: 
-  repository_dispatch:
-    types:[workflows]
-
+name: Deploy
+on:
+  workflow_dispatch:
+  push:
+    branches:
+      - master
 jobs:
-  build-and-test:
+  build:
+    name: Run API
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v2
-
-    - name: Install Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '14.x'
-
-    - name: Install dependencies
-      run: npm install
-
-    - name: Run tests
-      run: npm test
+      - name: Build API
+        run: |
+          echo "Build API"
+          sleep 10s
