--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -1,15 +1,39 @@
-name: Deploy
+name: Node.js CI
+
 on:
-  workflow_dispatch:
   push:
     branches:
-      - master
+      - main
+  pull_request:
+    branches:
+      - main
+
 jobs:
   build:
-    name: Run API
+
     runs-on: ubuntu-latest
+
     steps:
-      - name: Build API
-        run: |
-          echo "Build API"
-          sleep 10s
+    - uses: actions/checkout@v2
+
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v2
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+
+    - name: Install Dependencies
+      run: npm ci
+
+    - name: Build
+      run: npm run build
+
+    - name: Test
+      run: npm test
+
+    - name: Deploy
+      uses: JamesIves/github-pages-deploy-action@3.7.1
+      with:
+        ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+        BRANCH: gh-pages
+        FOLDER: dist
