--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -1,39 +1,20 @@
-name: Node.js CI
-
+name: Copy Repository
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
-
+  workflow_dispatch:
 jobs:
-  build:
-
+  copy:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v2
-
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-
-    - name: Install Dependencies
-      run: npm ci
-
-    - name: Build
-      run: npm run build
-
-    - name: Test
-      run: npm test
-
-    - name: Deploy
-      uses: JamesIves/github-pages-deploy-action@3.7.1
-      with:
-        ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-        BRANCH: gh-pages
-        FOLDER: dist
+      - name: Checkout original repository
+        uses: actions/checkout@v2
+        with:
+          repository: sardaralii/nodepro1
+      - name: Copy files to new repository
+        run: |
+          cp -R ./* ../https://github.com/sardaralii/nodepro1/
+          cd ../nodepro2/
+          git config --global user.email "sardarali785621@gmail.com"
+          git config --global user.name "sardarali"
+          git add -A
+          git commit -m "Copy files from original repository"
+          git push
